Fixing styling on IE11, because that still exists

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,7 @@ $border-radius: 6px;
  */
 
 html, body {
+  display: flex;
   width: 100%;
   min-width: 320px;
   min-height: 100vh;
@@ -38,7 +39,6 @@ html, body {
 }
 
 body {
-  display: flex;
   align-items: center;
   justify-content: center;
   background: $white;
@@ -61,7 +61,8 @@ a:hover {
   width: 80%;
   max-width: 400px;
   padding: 10px;
-  margin: 20px auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 18px;
   font-weight: 200;
   line-height: 30px;
